<resources>
    <string name="app_name">SWAP</string>
    <string name="welcome_user">Welcome Bro</string>
    <string name="register">Register</string>
    <string name="not_registred">Not_Registred</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="already_registred">Already_Registred</string>
    <string name="confirm_password">Confirm_Password</string>
    <string name="lorem_ipsum">lorem</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="post">Submit</string>
    <string name="choose">Choose image</string>
    <string name="Add">Add it</string>


</resources>
