<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Add"
    android:background="@drawable/haha">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <TextView
        android:id="@+id/showdescriptiontitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add a new event"
        android:textSize="35dp" />

    <EditText
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="#E1DBDC"
        android:gravity="center_horizontal"
        android:hint="@string/title"

        android:textAlignment="center" />

    <EditText
        android:layout_width="343dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="#E1DBDC"
        android:gravity="center_horizontal"
        android:hint="@string/description"
        android:textAlignment="center" />

    <EditText
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="#E1DBDC"
        android:gravity="center_horizontal"
        android:hint="@string/location"
        android:textAlignment="center" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="#E1DBDC"
        android:gravity="center_horizontal"
        android:hint="@string/date"
        android:textAlignment="center" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/post" />
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/menu" />

</RelativeLayout>